
Version 0.9.2,2005-01-09
- Fixed a bug that prevented jGallery from running as default context
- updated jGallery.htm to include a setup for jGallery as default context 

2005-01-02
- Added statistics page for individual images

Version 0.9.1, 2004-12-28
- Through some subversion misconfiguration PathHelper was an old version and jGallery would not recognize folders below the jGallery context (especially the demo) 

2004-12-27
- ported singapore.sourceforge.net's standard template, included as template "Singapore"

2004-12-26
- renamed the term "skin" to "template"
- some more fixes in XP template
- fixed some more unclosed InputStreams

2004-12-21
- jGallery successfully tested with WebLogic Server 9.0b

2004-12-20
- added public List for parent > links 

2004-12-19
- ThumbnailWriter lookup would fail if there was a jGallery.properties in current folder
- finshed porting XP skin from singapore.sourceforge.net, this skin is done totally in JSTL

2004-12-08
- fixed some unclosed InputStreams

Version 0.9, 2004-12-03
- removed timecheck in creating thumbs
- implemented Folder.getNeighbourImages() to use in JSTL 
- ported MinimumBlue skin from singapore.sourceforge.net, this skin is done totally in JSTL 


Version 0.8.9b, 2004-11-21
- fixed NPE for selecting random image when there weren't thumbnails, yet. 

Version 0.8.9a, 2004-11-16
- some Tomcat versions seem to have problems with overloaded methods where the non-parameter version is used as a JSP EL variable, therefore renamed getIndexPage(int) to getCalculatedIndexPage(int)

Version 0.8.9, 2004-11-11
- ThumbnailWriter are instantiated by reflection and specified in web.xml
- for subfolders a random image can be used as icon (old way with folder icon can be configured with foldericon.style=icon

Version 0.8.8, 2004-09-08
- added a parameter parentlink.XXX=<link> in jGallery.properties, which generates an up-link for gallery XXX.
- if jGallery.properties is missing, use defaults

Version 0.8.7, 2004-09-05