@@ -9,7 +9,7 @@
 
 <head>
 
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=${folder.textEncoding}" />
 
 <link rel="stylesheet" type="text/css" media="screen" href="${folder.templatePath}/main.css" />
 
