@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   
-   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=${folder.textEncoding}" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="${folder.templatePath}/main.css" />
 
